RESOLVED FIXED311411
SelectorFilter::initializeParentStack() should not defeat inline vector storage
https://bugs.webkit.org/show_bug.cgi?id=311411
Summary SelectorFilter::initializeParentStack() should not defeat inline vector storage
Chris Dumez
Reported 2026-04-03 05:27:10 PDT
SelectorFilter::initializeParentStack() should not defeat inline vector storage.
Attachments
Chris Dumez
Comment 1 2026-04-03 05:29:45 PDT
EWS
Comment 2 2026-04-03 06:32:48 PDT
Committed 310514@main (59d0c6060bde): <https://commits.webkit.org/310514@main> Reviewed commits have been landed. Closing PR #61972 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-03 06:33:12 PDT
Note You need to log in before you can comment on or make changes to this bug.