SelectorFilter::initializeParentStack() should not defeat inline vector storage https://bugs.webkit.org/show_bug.cgi?id=311411

Reviewed by Anne van Kesteren.

m_parentStack is a Vector with inline capacity of 20. The previous code called
reserveCapacity(capacity() + ancestors.size()), which always added 20 (the inline
capacity) to the ancestor count, forcing a heap allocation even for shallow DOM trees
that would fit entirely in inline storage. Just reserve ancestors.size() instead, which
is a no-op when the count fits within the existing inline capacity.

* Source/WebCore/css/SelectorFilter.cpp:
(WebCore::SelectorFilter::initializeParentStack):

Canonical link: https://commits.webkit.org/310514@main